crates/xberg-ffi/include/xberg.h

typedef uint64_t XBERGAlefHandle;
char *xberg_heuristics_config_to_json(XBERGAlefHandle handle);
char *xberg_hierarchy_config_to_json(XBERGAlefHandle handle);
void xberg_hierarchy_config_free(XBERGAlefHandle handle);
char *xberg_html_output_config_to_json(XBERGAlefHandle handle);
void xberg_html_output_config_free(XBERGAlefHandle handle);
char *xberg_image_extraction_config_to_json(XBERGAlefHandle handle);
void xberg_image_extraction_config_free(XBERGAlefHandle handle);
char *xberg_image_preprocessing_config_to_json(XBERGAlefHandle handle);
void xberg_image_preprocessing_config_free(XBERGAlefHandle handle);
char *xberg_keyword_config_to_json(XBERGAlefHandle handle);
void xberg_keyword_config_free(XBERGAlefHandle handle);
char *xberg_language_detection_config_to_json(XBERGAlefHandle handle);
void xberg_language_detection_config_free(XBERGAlefHandle handle);
char *xberg_late_interaction_config_to_json(XBERGAlefHandle handle);
void xberg_late_interaction_config_free(XBERGAlefHandle handle);
char *xberg_late_interaction_match_to_json(XBERGAlefHandle handle);
void xberg_late_interaction_match_free(XBERGAlefHandle handle);
char *xberg_layout_detection_config_to_json(XBERGAlefHandle handle);
void xberg_layout_detection_config_free(XBERGAlefHandle handle);
char *xberg_llm_config_to_json(XBERGAlefHandle handle);
char *xberg_map_result_to_json(XBERGAlefHandle handle);
void xberg_map_result_free(XBERGAlefHandle handle);
char *xberg_metadata_to_json(XBERGAlefHandle handle);
char *xberg_multi_vector_embedding_to_json(XBERGAlefHandle handle);
char *xberg_multidoc_thresholds_to_json(XBERGAlefHandle handle);
void xberg_multidoc_thresholds_free(XBERGAlefHandle handle);
char *xberg_ngram_range_to_json(XBERGAlefHandle handle);
void xberg_ngram_range_free(XBERGAlefHandle handle);
char *xberg_ocr_config_to_json(XBERGAlefHandle handle);
void xberg_ocr_config_free(XBERGAlefHandle handle);
char *xberg_ocr_quality_thresholds_to_json(XBERGAlefHandle handle);
void xberg_ocr_quality_thresholds_free(XBERGAlefHandle handle);
char *xberg_paddle_ocr_config_to_json(XBERGAlefHandle handle);
char *xberg_page_config_to_json(XBERGAlefHandle handle);
void xberg_page_config_free(XBERGAlefHandle handle);
char *xberg_page_range_to_json(XBERGAlefHandle handle);
char *xberg_page_signals_to_json(XBERGAlefHandle handle);
void xberg_page_signals_free(XBERGAlefHandle handle);
char *xberg_pdf_config_to_json(XBERGAlefHandle handle);
char *xberg_post_processor_config_to_json(XBERGAlefHandle handle);
void xberg_post_processor_config_free(XBERGAlefHandle handle);
char *xberg_preset_to_json(XBERGAlefHandle handle);
void xberg_preset_free(XBERGAlefHandle handle);
char *xberg_preset_summary_to_json(XBERGAlefHandle handle);
void xberg_preset_summary_free(XBERGAlefHandle handle);
char *xberg_rake_params_to_json(XBERGAlefHandle handle);
void xberg_rake_params_free(XBERGAlefHandle handle);
char *xberg_redaction_config_to_json(XBERGAlefHandle handle);
char *xberg_redaction_pattern_to_json(XBERGAlefHandle handle);
void xberg_redaction_pattern_free(XBERGAlefHandle handle);
char *xberg_redaction_term_to_json(XBERGAlefHandle handle);
void xberg_redaction_term_free(XBERGAlefHandle handle);
char *xberg_reranker_config_to_json(XBERGAlefHandle handle);
void xberg_reranker_config_free(XBERGAlefHandle handle);
char *xberg_security_limits_to_json(XBERGAlefHandle handle);
void xberg_security_limits_free(XBERGAlefHandle handle);
char *xberg_server_config_to_json(XBERGAlefHandle handle);
char *xberg_sparse_embedding_config_to_json(XBERGAlefHandle handle);
void xberg_sparse_embedding_config_free(XBERGAlefHandle handle);
char *xberg_supported_format_to_json(XBERGAlefHandle handle);
void xberg_supported_format_free(XBERGAlefHandle handle);
char *xberg_svg_options_to_json(XBERGAlefHandle handle);