packages/csharp/src/Xberg/NativeMethods.cs


  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_heuristics_config_to_json")]
  internal static extern IntPtr HeuristicsConfigToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_hierarchy_config_to_json")]
  internal static extern IntPtr HierarchyConfigToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_hierarchy_config_free")]
  internal static extern void HierarchyConfigFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_html_output_config_to_json")]
  internal static extern IntPtr HtmlOutputConfigToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_html_output_config_free")]
  internal static extern void HtmlOutputConfigFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_image_extraction_config_to_json")]
  internal static extern IntPtr ImageExtractionConfigToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_image_extraction_config_free")]
  internal static extern void ImageExtractionConfigFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_image_preprocessing_config_to_json")]
  internal static extern IntPtr ImagePreprocessingConfigToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_image_preprocessing_config_free")]
  internal static extern void ImagePreprocessingConfigFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_keyword_config_to_json")]
  internal static extern IntPtr KeywordConfigToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_keyword_config_free")]
  internal static extern void KeywordConfigFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_language_detection_config_to_json")]
  internal static extern IntPtr LanguageDetectionConfigToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_language_detection_config_free")]
  internal static extern void LanguageDetectionConfigFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_late_interaction_config_to_json")]
  internal static extern IntPtr LateInteractionConfigToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_late_interaction_config_free")]
  internal static extern void LateInteractionConfigFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_late_interaction_match_to_json")]
  internal static extern IntPtr LateInteractionMatchToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_late_interaction_match_free")]
  internal static extern void LateInteractionMatchFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_layout_detection_config_to_json")]
  internal static extern IntPtr LayoutDetectionConfigToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_layout_detection_config_free")]
  internal static extern void LayoutDetectionConfigFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_llm_config_to_json")]
  internal static extern IntPtr LlmConfigToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_map_result_to_json")]
  internal static extern IntPtr MapResultToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_map_result_free")]
  internal static extern void MapResultFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_metadata_to_json")]
  internal static extern IntPtr MetadataToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_multi_vector_embedding_to_json")]
  internal static extern IntPtr MultiVectorEmbeddingToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_multidoc_thresholds_to_json")]
  internal static extern IntPtr MultidocThresholdsToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_multidoc_thresholds_free")]
  internal static extern void MultidocThresholdsFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_ngram_range_to_json")]
  internal static extern IntPtr NgramRangeToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_ngram_range_free")]
  internal static extern void NgramRangeFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_ocr_config_to_json")]
  internal static extern IntPtr OcrConfigToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_ocr_config_free")]
  internal static extern void OcrConfigFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_ocr_quality_thresholds_to_json")]
  internal static extern IntPtr OcrQualityThresholdsToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_ocr_quality_thresholds_free")]
  internal static extern void OcrQualityThresholdsFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_paddle_ocr_config_to_json")]
  internal static extern IntPtr PaddleOcrConfigToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_page_config_to_json")]
  internal static extern IntPtr PageConfigToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_page_config_free")]
  internal static extern void PageConfigFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_page_range_to_json")]
  internal static extern IntPtr PageRangeToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_page_signals_to_json")]
  internal static extern IntPtr PageSignalsToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_page_signals_free")]
  internal static extern void PageSignalsFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_pdf_config_to_json")]
  internal static extern IntPtr PdfConfigToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_post_processor_config_to_json")]
  internal static extern IntPtr PostProcessorConfigToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_post_processor_config_free")]
  internal static extern void PostProcessorConfigFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_preset_to_json")]
  internal static extern IntPtr PresetToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_preset_free")]
  internal static extern void PresetFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_preset_summary_to_json")]
  internal static extern IntPtr PresetSummaryToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_preset_summary_free")]
  internal static extern void PresetSummaryFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_rake_params_to_json")]
  internal static extern IntPtr RakeParamsToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_rake_params_free")]
  internal static extern void RakeParamsFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_redaction_config_to_json")]
  internal static extern IntPtr RedactionConfigToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_redaction_pattern_to_json")]
  internal static extern IntPtr RedactionPatternToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_redaction_pattern_free")]
  internal static extern void RedactionPatternFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_redaction_term_to_json")]
  internal static extern IntPtr RedactionTermToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_redaction_term_free")]
  internal static extern void RedactionTermFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_reranker_config_to_json")]
  internal static extern IntPtr RerankerConfigToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_reranker_config_free")]
  internal static extern void RerankerConfigFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_security_limits_to_json")]
  internal static extern IntPtr SecurityLimitsToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_security_limits_free")]
  internal static extern void SecurityLimitsFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_server_config_to_json")]
  internal static extern IntPtr ServerConfigToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_sparse_embedding_config_to_json")]
  internal static extern IntPtr SparseEmbeddingConfigToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_sparse_embedding_config_free")]
  internal static extern void SparseEmbeddingConfigFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_supported_format_to_json")]
  internal static extern IntPtr SupportedFormatToJson(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_supported_format_free")]
  internal static extern void SupportedFormatFree(ulong ptr);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_svg_options_to_json")]
  internal static extern IntPtr SvgOptionsToJson(ulong ptr);
